// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscussionReplies edit action sheet calls cancel 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23 at 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
        testID="web-container.view"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "paddingBottom": 2,
                  "paddingRight": 2,
                  "paddingTop": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23 at 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
        testID="web-container.view"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "paddingBottom": 2,
                  "paddingRight": 2,
                  "paddingTop": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders deleted 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23 at 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
        testID="web-container.view"
      />
      <View
        style={
          Object {
            "marginTop": 16,
          }
        }
      />
      <View />
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders more button with some deleted replies 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "width": 96,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginRight": 8,
          "width": 24,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#f5f5f5",
            "flex": 1,
            "width": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginRight": 8,
          "width": 24,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#f5f5f5",
            "flex": 1,
            "width": 1,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "column",
          "justifyContent": "flex-start",
          "marginRight": 8,
          "width": 24,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#f5f5f5",
            "flex": 1,
            "width": 1,
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL="http://www.fillmurray.com/100/100"
      height={24}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="The Donald"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        The Donald
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23 at 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
        testID="web-container.view"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "paddingBottom": 2,
                  "paddingRight": 2,
                  "paddingTop": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
  </View>
</View>
`;

exports[`DiscussionReplies renders with no user 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <View />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "marginRight": 8,
        "marginTop": 10,
        "paddingTop": 6,
      }
    }
  >
    <View />
    <Avatar
      avatarURL=""
      height={24}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "borderRadius": 12,
          "height": 24,
          "marginTop": 12.8,
          "width": 24,
        }
      }
      testID="reply.avatar"
      userName="?"
    />
    <View
      style={
        Object {
          "backgroundColor": "#f5f5f5",
          "flex": 1,
          "width": 1,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "marginTop": 12.8,
        }
      }
    >
      <Text
        accessibilityTraits="none"
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 14,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Unknown Author
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "color": "#8B969E",
              "fontSize": 12,
              "marginBottom": 16,
            },
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        May 23 at 11:12 AM
      </Text>
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
        testID="web-container.view"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginTop": 16,
          }
        }
      >
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.reply-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Reply
            </Text>
          </View>
        </TouchableOpacity>
        <Text
          accessible={false}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "alignSelf": "flex-end",
                  "paddingBottom": 2,
                  "paddingRight": 2,
                  "paddingTop": 2,
                },
                Object {
                  "alignSelf": "center",
                  "color": "#C7CDD1",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                  "textAlign": "center",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
        >
          |
        </Text>
        <TouchableOpacity
          accessibilityTraits="button"
          hitSlop={
            Object {
              "bottom": 15,
              "left": 15,
              "right": 15,
              "top": 15,
            }
          }
          onPress={[Function]}
          style={
            Object {
              "alignSelf": "flex-end",
              "paddingBottom": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
          testID="discussion.edit-btn"
          textAttributes={
            Object {
              "color": "#8B969E",
              "fontWeight": "500",
            }
          }
        >
          <View>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Array [
                    Object {
                      "color": "#374A59",
                      "fontSize": 14,
                    },
                    Object {
                      "fontFamily": ".SFUIDisplay-bold",
                    },
                    Object {
                      "color": "#374A59",
                    },
                    Object {
                      "color": "#8B969E",
                      "fontWeight": "500",
                    },
                  ],
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Edit
            </Text>
          </View>
        </TouchableOpacity>
      </View>
      <View />
    </View>
  </View>
</View>
`;
